# Task

./: .gitignore
2 term/: Actitude and visibility.c  Breasth First Search.c  Dijkstra.c  Eulerian cycle.c  Floyd-Warshall.c  Ford-Bellman.c  Hall of water life.c  Hot-keys.c  Knapsack problem.c  Knuth-Moris-Pratt.c  LCA.c  Ling-lon sort.c  SST for sparse graph.c  input.txt  make.sh  Ближайшее число.c  Большой линейный коллайдер.bak  Бюрократия.c  Водовод на о. Русский.c  Выбор заведующего кафедрой.c  Грузоперевозки.c  Диплом.bak  Золотая середина.c  Лабиринт.c  Максим в скользящем окне.c  Наибольшая возростающая подпоследовательность.c  Наибольшая общая подпоследовательность.c  Ответы к тесту.c  Перестройка.c  Поврежденный XML.c  Сбвлвнсированное дерево revisited.c  Свинья-копилка.c  Слишком много способов.c  Спичечный блоки.c  Судьба математика.c  Хоттабыч и гирлянда.bak
3 semester/: g.py  input.txt  sqlt_n.c  Коррекция фотоснимков.py  Коррекция фотоснимков.pyx  Раскрытие скобок.py  Сжатие бинарной строки - 2.py  Сжатие бинарной строки.py
3 term/: В помощь курьерам!.c  Водопроводная сеть.c  Водопроводная сеть.pyx  Возведение большого числа в степень.py  Сортировка записей.py  Треугольные конфигурации.pyx  Частотный словарь.py  Число комнат в лабиринте.c  Число комнат в лабиринте.py  Число комнат в лабиринте.pyx
Assembler/: 1_1.asm  1_2.asm  1_3.asm  3-3.asm  3_1.asm  3_2.asm  3_3.asm
DotProReader/: api.txt  c_b0proj.hpp  cxxopts.hpp  main.cpp  (+1 more)
parallel/final/: CMakeLists.txt  MPIConfig.h  RenderMap.cpp  RenderMap.h  SeaBattleMap.cpp  SeaBattleMap.h  StateSeaBattle.cpp  StateSeaBattle.h  client.cpp  main.cpp  server.cpp
parallel/openMP/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  5_log  6.cpp  CMakeLists.txt  MakeFile  helper.h
(+273 files in other folders)
